# smart-season-backend

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
accounts/: admin.py  models.py  permissions.py  serializers.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
operations/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
operations/migrations/: 0001_initial.py  0002_alter_fieldupdate_options_alter_field_planting_date_and_more.py
